--- a/client/User/style.css
+++ b/client/User/style.css
@@ -428,6 +428,9 @@ button:hover{
     color: white;
 
 }
+.tags li a{
+    text-decoration: none;
+}
 .edit{
     display: flex;
     /* position: relative; */
