--- a/client/login-signup/style.css
+++ b/client/login-signup/style.css
@@ -3,112 +3,6 @@ body{
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
-    color: black;
-}
-
-/******* nav bar ******/  
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav .logo img{
-    display: inline;
-    color: white;
-    height: 65px;
-    width: 65px;
-    margin-left: 45px;
-    position: relative;
-    top: 15px;
-}
-
-nav a:first-child{
-    margin-left:100px;
-}
-.nav-list{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
-.nav-list>li{
-    margin:10px;
-    /* padding-right:15px; */
-    margin-right: 20px;
-    font-size: 1.4rem;
-}
-.nav-list>li>a{
-    text-decoration: none;
-    color:white;
-    font-family: 'Jost', sans-serif;
-    position:relative;
-    display: inline-block;
-}
-.nav-list>li>a::before,
-.nav-list>li>a::after{
-    content:'';
-    position:absolute;
-    left: 0;
-    width:100%;
-    height:2px;
-    background-color: #f8bf8c;
-    transform: scaleX(0);
-    transition: transform 0.25s ;
-}
-.nav-list>li>a::before{
-    top:-3px;
-    transform-origin: left;
-}
-.nav-list>li>a::after{
-    bottom:-3px;
-    transform-origin: right;
-}
-.nav-list>li>a:hover::before,
-.nav-list>li>a:hover::after{
-    transform:scaleX(1);
-}
-.hamburger {
-    display: none;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #f8bf8c;
-}
-.name{
-    color:white;
-    font-family: 'Jost', sans-serif;
-    font-size: 48.7px;
-    margin-left: 20px;  
-    font-family: 'IBM Plex Sans', sans-serif;
-    text-decoration: none;
-}
-.name>span{
-    color:#f8bf8c;
-    font-family: 'Freehand', cursive;
-}
-.input{
-    background: none;
-    border:1px solid #f8bf8c;
-    margin-right: 20px;
-    border-radius: 30px;
-    padding:8.2px;
-    padding-left: 30px;
-}
-.fa-search{
-    position: relative;
-    left:24px;
-    z-index:999;
-    opacity:0.4
-}
-nav img{
     color: white;
 }
 
@@ -124,6 +18,17 @@ nav img{
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+.name {
+    font-size: 6rem;
+    margin-bottom: 3%;
+}
+.name span{
+    color: #f8bf8c;
+    font-family: 'Freehand', cursive;
+}
+.landing-desc{
+    font-size: 1.3rem;
 }
 .form-box-div{
     margin-top: 60px;
@@ -210,12 +115,6 @@ nav img{
 }
 .check-box{
     margin: 30px 10px 30px 0;
-}
-span{
-    color: #777;
-    font-size: 12px;
-    bottom: 65px;
-    position: absolute;
 }
 #login{
     left: 50px;
