--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -327,6 +327,30 @@ progress {
 .comments_count{
     color:black;
 }
+.comment_input{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color:black;
+    padding-bottom: 20px;
+}
+.comment_input>input{
+    border-radius: 20px;
+    color: black;
+    padding: 10px 20px 10px 20px;
+    margin: 0px 20px 0px 20px;
+}
+.comment_input>button{
+    color: black;
+    background: none;
+    padding:10px;
+    border-radius: 5px;
+}
+.comment_input>button:hover{
+    cursor: pointer;
+    background:#f8bf8c;
+}
 .reactions .fa-regular{
     color: #252525;
 }
