--- a/client/category/style.css
+++ b/client/category/style.css
@@ -10,6 +10,17 @@
     height:90vh;
     margin-bottom: 10px;
 }
+#loading{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff 
+    url('../assets/gif.svg')
+    no-repeat center;
+    background-color: #252525;
+    background-size: 150px 200px;
+    z-index: 2;
+}
 
 /*****************************************CATEGORY TOP DES****************************************/
 #img-category{
