--- a/client/compose/editor.css
+++ b/client/compose/editor.css
@@ -6,6 +6,17 @@ body{
     color: #f5f5f5;
     overflow-x: hidden;
 }
+#loading{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff 
+    url('../assets/gif.svg')
+    no-repeat center;
+    background-color: #252525;
+    background-size: 150px 200px;
+    z-index: 2;
+}
     
     
     /******* nav bar ******/
