--- a/client/login-signup/style.css
+++ b/client/login-signup/style.css
@@ -5,11 +5,23 @@ body{
     padding: 0;
     color: white;
 }
+#loading{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff 
+    url('../assets/gif.svg')
+    no-repeat center;
+    background-color: #252525;
+    background-size: 150px 200px;
+    z-index: 2;
+}
+
 
 /************* login signup page  **********/
 .hero{
-    height: 100%;
     width: 100%;
+    height: 100vh;
     /* background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(../assets/VR.jpg); */
     background-position: center;
     background-size: cover;
