--- a/client/search/styles.css
+++ b/client/search/styles.css
@@ -13,6 +13,17 @@ body{
     /* padding:0; */
     background: #252525;
 }
+#loading{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff 
+    url('../assets/gif.svg')
+    no-repeat center;
+    background-color: #252525;
+    background-size: 150px 200px;
+    z-index: 2;
+}
 
 /******* nav bar ******/  
 nav{
