--- a/public/Homepage/style.css
+++ b/public/Homepage/style.css
@@ -9,6 +9,17 @@
     background: #252525;
     height:100vh;
 }
+#loading{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff 
+    url('../assets/gif.svg')
+    no-repeat center;
+    background-color: #252525;
+    background-size: 150px 200px;
+    z-index: 2;
+}
 
 /******* nav bar ******/
 
@@ -291,24 +302,16 @@ button:hover{
 .fa-regular{
     position: inherit;
     left: 100%;
-    right: 0;
-    /* float: right; */
-    /* margin-left: 125px; */
+    margin-left: 30px;
     cursor: pointer;
     user-select: none;
 }
 .fa-solid{
     position: inherit;
     left: 100%;
-    right: 0;
-    /* float: right; */
-    /* margin-left: 125px; */
+    margin-left: 30px;
     cursor: pointer;
     user-select: none;
-}
-.tags .fa-regular{
-    float: right;
-
 }
 .fa-regular:hover, .fa-solid:hover {
     color: #f8bf8c;
