--- a/public/Homepage/style.css
+++ b/public/Homepage/style.css
@@ -116,16 +116,33 @@ nav a:first-child{
 .input{
     background: none;
     border:1px solid #f8bf8c;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 30px;
     padding:8.2px;
     padding-left: 30px;
+    color: white;
 }
 .fa-search{
     position: relative;
     left:24px;
     z-index:999;
     opacity:0.4
+}
+.myBtn{
+    color: #252525;
+    padding:5px 10px;
+    background: none;
+    border:1px solid white;
+    font-size: 1.1rem;
+    border-radius: 0px;
+    background-color: #f5f5f5;
+    transform-origin: left;
+    border-radius: 40px;
+    margin-right: 10px;
+}
+.myBtn:hover{
+    background-color: #f8bf8c;
+    color: #f5f5f5;
 }
 nav img{
     color: white;
