--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -270,11 +270,12 @@ progress {
     /* margin-top: 15px; */
     margin-left: 15px;
     font-size: 1rem;
-    color: #f5f5f5
+    color: #f5f5f5;
 } 
-/* .post-author .author-content .published-date span{
+.post-author .author-content .published-date span{
+    color: #f5f5f5;
     font-size: 1rem;
-} */
+}
 
 /* blog description  */
 #blog-description{
@@ -538,6 +539,7 @@ button.primaryContained {
     text-align: center;
 }
 .check-blogs-you-may-like{
+    color: #f5f5f5;
     margin:20px;
     font-size:1.5rem;
     margin-left:5vw;    
@@ -632,6 +634,7 @@ footer{
     padding: 30px;
 }
 .subscribe > .subscribe-us {
+    color: #f5f5f5;
     display: block;
     font-size: 3rem;
     padding-left: 30px;
@@ -664,10 +667,14 @@ footer{
     cursor: pointer;
 }
 .main-footer{
+    color: #f5f5f5;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding-top: 30px;
+}
+.main-footer h3{
+    color: #f5f5f5;
 }
 .footer-name{
     display: flex;
@@ -680,6 +687,7 @@ footer{
     transform: translateX(-1.4rem);
 }
 .footer-desc{
+    color: #f5f5f5;
     font-size: 1.4rem;
 }
 .footer-column{
@@ -700,9 +708,11 @@ footer{
     padding-left: 0;
 }
 .footer-links>ul>li>a{
+    color: #f5f5f5;
     text-decoration: none;
 }
 .rights{
+    color: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
