--- a/public/Blog-opening/style.css
+++ b/public/Blog-opening/style.css
@@ -1,5 +1,5 @@
 *{  
-    color:white;
+    color:black;
     font-family: 'Jost', sans-serif;
 }
 #Landing{
@@ -218,6 +218,7 @@ progress {
     font-size: 3.3rem;
     font-family: 'Bona Nova';
     margin: 0;
+    color:white;
     /* margin-left: 5%; */
 }
 
@@ -239,6 +240,7 @@ progress {
     height: 400px;
     width: 375px;
     border-radius: 15px;
+    object-fit: cover;
 }
 .post-author{
     display: flex;
@@ -249,6 +251,7 @@ progress {
     border-radius: 50%;
     height: 60px;
     width: 60px;
+    object-fit: cover;
 }
 .post-author .author-content{
     display: flex;
@@ -267,11 +270,12 @@ progress {
     /* margin-top: 15px; */
     margin-left: 15px;
     font-size: 1rem;
-    color: #f5f5f5
+    color: #f5f5f5;
 } 
-/* .post-author .author-content .published-date span{
+.post-author .author-content .published-date span{
+    color: #f5f5f5;
     font-size: 1rem;
-} */
+}
 
 /* blog description  */
 #blog-description{
@@ -535,6 +539,7 @@ button.primaryContained {
     text-align: center;
 }
 .check-blogs-you-may-like{
+    color: #f5f5f5;
     margin:20px;
     font-size:1.5rem;
     margin-left:5vw;    
@@ -629,6 +634,7 @@ footer{
     padding: 30px;
 }
 .subscribe > .subscribe-us {
+    color: #f5f5f5;
     display: block;
     font-size: 3rem;
     padding-left: 30px;
@@ -661,10 +667,14 @@ footer{
     cursor: pointer;
 }
 .main-footer{
+    color: #f5f5f5;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding-top: 30px;
+}
+.main-footer h3{
+    color: #f5f5f5;
 }
 .footer-name{
     display: flex;
@@ -677,6 +687,7 @@ footer{
     transform: translateX(-1.4rem);
 }
 .footer-desc{
+    color: #f5f5f5;
     font-size: 1.4rem;
 }
 .footer-column{
@@ -697,9 +708,11 @@ footer{
     padding-left: 0;
 }
 .footer-links>ul>li>a{
+    color: #f5f5f5;
     text-decoration: none;
 }
 .rights{
+    color: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
