--- a/public/Homepage/style.css
+++ b/public/Homepage/style.css
@@ -2,6 +2,9 @@
     color:white;
     font-family: 'Jost', sans-serif;
 }
+body{
+    background-color: #FAF9F6;
+}
 #Landing{
     margin: -8px;
     overflow-x: hidden;
@@ -116,33 +119,16 @@ nav a:first-child{
 .input{
     background: none;
     border:1px solid #f8bf8c;
-    margin-right: 10px;
+    margin-right: 20px;
     border-radius: 30px;
     padding:8.2px;
     padding-left: 30px;
-    color: white;
 }
 .fa-search{
     position: relative;
     left:24px;
     z-index:999;
     opacity:0.4
-}
-.myBtn{
-    color: #252525;
-    padding:5px 10px;
-    background: none;
-    border:1px solid white;
-    font-size: 1.1rem;
-    border-radius: 0px;
-    background-color: #f5f5f5;
-    transform-origin: left;
-    border-radius: 40px;
-    margin-right: 10px;
-}
-.myBtn:hover{
-    background-color: #f8bf8c;
-    color: #f5f5f5;
 }
 nav img{
     color: white;
@@ -185,7 +171,7 @@ button:hover{
 
 /****** Latest-body ******/
 #latest-blog-section{
-    background-color: #252525;
+    background-color: #FAF9F6;
     margin:-8px;
     margin-bottom: 20px;
 }
@@ -259,6 +245,7 @@ button:hover{
     text-align: center;
 }
 .check-latest-blog{
+    color: #252525;
     margin:20px;
     font-size:20px;
     margin-left:5vw;    
@@ -273,12 +260,13 @@ button:hover{
     width:450px;
 }
 .desc{
-    /* padding-left: 20px; */
     font-size: 30px;
 }
 .desc2{
-    /* padding-left: 20px; */
     font-size: 15px;
+}
+.descblack, .desc2black{
+    color: #252525;  
 }
 .tags{
     display: flex;
@@ -307,7 +295,23 @@ button:hover{
     position: relative;
     bottom: 125px;
     left: -2px;
-    background-size: cover;
+    object-fit: cover;
+}
+.my-img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin-left: 12px;
+    /* position: relative; */
+    bottom: 125px;
+    left: -2px;
+    object-fit: cover;
+    transform: translate(-7px,4px);
+}
+.nav-link-profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .bookmark{
     display: flex;
@@ -320,6 +324,7 @@ button:hover{
     transform: translateX(-60px);
 }
 .fa-regular{
+    color: #252525;
     position: inherit;
     left: 100%;
     margin-left: 30px;
@@ -327,6 +332,7 @@ button:hover{
     user-select: none;
 }
 .fa-solid{
+    color: #252525;
     position: inherit;
     left: 100%;
     margin-left: 30px;
@@ -339,8 +345,10 @@ button:hover{
 
 /**************** Categories names  *******************/
 #categories{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    background-color: #FAF9F6;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 100%;
 }
 #categories h2{
     color: #252525;
@@ -390,10 +398,11 @@ button:hover{
 
 /******************* Recent-Blogs**************** */
 
-/* #recent{
+#recent{
     /* height:100vh; */
-    /* background-color: #e5e5e5; 
-} */
+    width: 100%;
+    background-color: #FAF9F6;
+}
 .recent-wrap>h2{
     color:black;
     font-weight: 400;
