--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -634,23 +634,27 @@ footer{
 .subscribe{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .subscribe > .subscribe-us {
     color: #f5f5f5;
-    display: block;
     font-size: 3rem;
-    padding-left: 30px;
-    width: fit-content;
+    position: relative;
+    left: 4%;
+    /* padding-left: 30px; */
+    /* width: fit-content; */
 }
 
 .subscribe-input-btn {
-    display: flex;
-    margin-left: 40%;
-    margin-right: 5%;
-    padding-left: 10px;
+    /* display: flex; */
+    /* margin-left: 40%; */
+    /* margin-right: 5%; */
+    /* padding-left: 10px; */
+    position: relative;
+    right: 2%;
 }
 .subscribe-input{
     border: 2px solid #f8bf8c;
@@ -814,8 +818,31 @@ footer{
     }
 }
 
-@media only screen and (max-width: 768px) {
-    
-
-
+@media only screen and (max-width: 991px) {
+    .subscribe{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .subscribe .subscribe-us{
+        left: 1.5%;
+        padding-bottom: 20px;
+    }
+    .subscribe-input-btn{
+        left: 1.5%;
+    }
+    .main-footer{
+        width: 100%;
+    }
+    .footer-name{
+        width: 50%;
+    }
+    .footer-desc{
+        position: relative;
+        left: 10px;
+        width: 90%;
+    }
+    .company-name {
+        position: relative;
+        left: 10px;
+    }
 }
