--- a/client/compose/editor.css
+++ b/client/compose/editor.css
@@ -279,23 +279,27 @@ body{
     .subscribe{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        padding: 30px;
-        margin-top: 100px;
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
     .subscribe > .subscribe-us {
-        display: block;
+        color: #f5f5f5;
         font-size: 3rem;
-        padding-left: 30px;
-        width: fit-content;
+        position: relative;
+        left: 4%;
+        /* padding-left: 30px; */
+        /* width: fit-content; */
     }
     
     .subscribe-input-btn {
-        display: flex;
-        margin-left: 40%;
-        margin-right: 5%;
-        padding-left: 10px;
+        /* display: flex; */
+        /* margin-left: 40%; */
+        /* margin-right: 5%; */
+        /* padding-left: 10px; */
+        position: relative;
+        right: 2%;
     }
     .subscribe-input{
         border: 2px solid #f8bf8c;
@@ -304,7 +308,6 @@ body{
         padding:10px;
     }
     .footer-btn{
-        font-family: "Jost", sans-serif;
         font-size: 1.3rem;
         background: none;
         border:1px solid #f8bf8c;
@@ -312,17 +315,21 @@ body{
         margin-left: 10px;
         border-radius: 20px;;
         color:white;
-
     }
     .footer-btn:hover{
         color:black;
         cursor: pointer;
+        background-color: #f8bf8c;
     }
     .main-footer{
+        color: #f5f5f5;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         padding-top: 30px;
+    }
+    .main-footer h3{
+        color: #f5f5f5;
     }
     .footer-name{
         display: flex;
@@ -335,6 +342,7 @@ body{
         transform: translateX(-1.4rem);
     }
     .footer-desc{
+        color: #f5f5f5;
         font-size: 1.4rem;
     }
     .footer-column{
@@ -355,16 +363,17 @@ body{
         padding-left: 0;
     }
     .footer-links>ul>li>a{
-        text-decoration: none;
         color: #f5f5f5;
+        text-decoration: none;
     }
     .rights{
+        color: #f5f5f5;
         display: flex;
         align-items: center;
         justify-content: center;
         padding-top: 30px;
     }
-
+    
 
 @media only screen and (max-width : 768px){
     .container{
@@ -414,5 +423,34 @@ body{
         position: relative;
         margin-right: 200px;
         top: 26px;
+    }
+}
+
+@media only screen and (max-width: 991px) {
+    .subscribe{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .subscribe .subscribe-us{
+        left: 1.5%;
+        padding-bottom: 20px;
+    }
+    .subscribe-input-btn{
+        left: 1.5%;
+    }
+    .main-footer{
+        width: 100%;
+    }
+    .footer-name{
+        width: 50%;
+    }
+    .footer-desc{
+        position: relative;
+        left: 10px;
+        width: 90%;
+    }
+    .company-name {
+        position: relative;
+        left: 10px;
     }
 }
