--- a/public/User/style.css
+++ b/public/User/style.css
@@ -203,9 +203,17 @@ nav img{
 /* //SHOW FOLLOWERS AND FOLLOWINGS */
 #follow-following{
     background: #252525;
-    /* display: flex;
-    flex-direction: row; */
+    display: flex;
+    flex-direction: row;
+    /* width:80vw; */
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 60px;
+    padding-bottom: 100px;
 }
+/* #followers-section,#following-section{
+    width:50%;
+} */
 #categories{
     /* margin-top: 50px; */
     width:50vw;
@@ -226,18 +234,29 @@ nav img{
 }
 .category-wrap{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     height:300px;
-    width:80vw;
+    width:40vw;
     overflow: scroll;
 }
 .category-wrap .cat{
     display: flex;
     flex-direction: column;
     padding: 1.5% 1.4%;
+}
+.footer-stats-partition{
+    height:10px;
+    position: relative;
+    display: block;
+    flex: 0 0 80vw;
+    max-width: 80vw;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    color:grey;
 }
 
 .cat .cat-img img{
@@ -544,3 +563,187 @@ button:hover{
 }
 
 
+/****************footer**************/
+
+footer{
+    background-color: #252525;
+    margin: -8px;
+}
+.subscribe{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.subscribe > .subscribe-us {
+    color: #f5f5f5;
+    font-size: 3rem;
+    position: relative;
+    left: 4%;
+    /* padding-left: 30px; */
+    /* width: fit-content; */
+}
+
+.subscribe-input-btn {
+    /* display: flex; */
+    /* margin-left: 40%; */
+    /* margin-right: 5%; */
+    /* padding-left: 10px; */
+    position: relative;
+    right: 2%;
+}
+.subscribe-input{
+    border: 2px solid #f8bf8c;
+    border-radius: 20px;
+    font-size: 20px;
+    padding:10px;
+}
+.footer-btn{
+    font-size: 1.3rem;
+    background: none;
+    border:1px solid #f8bf8c;
+    padding:10px 15px;
+    margin-left: 10px;
+    border-radius: 20px;;
+    color:white;
+}
+.footer-btn:hover{
+    color:black;
+    cursor: pointer;
+    background-color: #f8bf8c;
+}
+.main-footer{
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top: 30px;
+}
+.main-footer h3{
+    color: #f5f5f5;
+}
+.footer-name{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.company-name{
+    font-size: 4.5rem;
+    transform: translateX(-1.4rem);
+}
+.footer-desc{
+    color: #f5f5f5;
+    font-size: 1.4rem;
+}
+.footer-column{
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    /* justify-content: flex-start; */
+    
+    font-size: 1rem;
+}
+.footer-links>ul{
+    list-style: none; 
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-left: 0;
+}
+.footer-links>ul>li>a{
+    color: #f5f5f5;
+    text-decoration: none;
+}
+.rights{
+    color: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+
+@media only screen and (max-width : 768px){
+.container{
+    width: 80vw;
+}
+.nav-list {
+    position: fixed;
+    left: -150%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+        0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+.nav-list.active {
+    background-color: #252525;
+    left: 0;
+    overflow: hidden;
+}
+
+.nav-item {
+    margin: 2.5rem 0;
+}
+
+.hamburger {
+    display: block;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+}
+.fa-search{
+    position: relative;
+    margin-right: 200px;
+    top: 26px;
+}
+}
+
+@media only screen and (max-width: 991px) {
+    .subscribe{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .subscribe .subscribe-us{
+        left: 1.5%;
+        padding-bottom: 20px;
+    }
+    .subscribe-input-btn{
+        left: 1.5%;
+    }
+    .main-footer{
+        width: 100%;
+    }
+    .footer-name{
+        width: 50%;
+    }
+    .footer-desc{
+        position: relative;
+        left: 10px;
+        width: 90%;
+    }
+    .company-name {
+        position: relative;
+        left: 10px;
+    }
+}
