--- a/public/category/style.css
+++ b/public/category/style.css
@@ -283,40 +283,57 @@ footer{
 .subscribe{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
-.subscribe>div{
+.subscribe > .subscribe-us {
+    color: #f5f5f5;
     font-size: 3rem;
-    padding-left: 0;
-    
+    position: relative;
+    left: 4%;
+    /* padding-left: 30px; */
+    /* width: fit-content; */
 }
-.subscribe-input-btn{
-    display: flex;
+
+.subscribe-input-btn {
+    /* display: flex; */
+    /* margin-left: 40%; */
+    /* margin-right: 5%; */
+    /* padding-left: 10px; */
+    position: relative;
+    right: 2%;
 }
 .subscribe-input{
+    border: 2px solid #f8bf8c;
     border-radius: 20px;
     font-size: 20px;
-    padding:10px
+    padding:10px;
 }
 .footer-btn{
     font-size: 1.3rem;
     background: none;
     border:1px solid #f8bf8c;
-    padding:10px;
+    padding:10px 15px;
+    margin-left: 10px;
     border-radius: 20px;;
     color:white;
 }
 .footer-btn:hover{
     color:black;
     cursor: pointer;
+    background-color: #f8bf8c;
 }
 .main-footer{
+    color: #f5f5f5;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding-top: 30px;
+}
+.main-footer h3{
+    color: #f5f5f5;
 }
 .footer-name{
     display: flex;
@@ -329,6 +346,7 @@ footer{
     transform: translateX(-1.4rem);
 }
 .footer-desc{
+    color: #f5f5f5;
     font-size: 1.4rem;
 }
 .footer-column{
@@ -349,15 +367,16 @@ footer{
     padding-left: 0;
 }
 .footer-links>ul>li>a{
+    color: #f5f5f5;
     text-decoration: none;
 }
 .rights{
+    color: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 30px;
 }
-
 
 @media only screen and (max-width: 768px) {
     .nav-list {
@@ -407,4 +426,33 @@ footer{
     }
 
 
+}
+
+@media only screen and (max-width: 991px) {
+    .subscribe{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .subscribe .subscribe-us{
+        left: 1.5%;
+        padding-bottom: 20px;
+    }
+    .subscribe-input-btn{
+        left: 1.5%;
+    }
+    .main-footer{
+        width: 100%;
+    }
+    .footer-name{
+        width: 50%;
+    }
+    .footer-desc{
+        position: relative;
+        left: 10px;
+        width: 90%;
+    }
+    .company-name {
+        position: relative;
+        left: 10px;
+    }
 }
