--- a/public/edit-profile/editprofile.css
+++ b/public/edit-profile/editprofile.css
@@ -166,6 +166,7 @@ nav img{
     border: 0;
     outline: none;
     border-radius: 30px;
+    margin-top: 20px;
 }
 .check-box{
     margin: 30px 10px 30px 0;
