navbar done everywhere

--- a/client/search/styles.css
+++ b/client/search/styles.css
@@ -54,8 +54,8 @@ nav a:first-child{
 }
 .nav-list>li{
     margin:10px;
-    /* padding-right:15px; */
-    margin-right: 20px;
+    padding-right:15px;
+    margin-right: 40px;
     font-size: 1.4rem;
 }
 .nav-list>li>a{
@@ -130,6 +130,7 @@ nav a:first-child{
     background: none;
     color:white;
     border: 1px solid white;
+    border-radius: 20px;
 }
 .search-btn:hover{
     color:black;
@@ -430,55 +431,61 @@ footer{
 }
 
 
-@media only screen and (max-width : 768px){
-.container{
-    width: 80vw;
-}
-.nav-list {
-    position: fixed;
-    left: -150%;
-    top: 5rem;
-    flex-direction: column;
-    background-color: #fff;
-    width: 100%;
-    border-radius: 10px;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow:
-        0 10px 27px rgba(0, 0, 0, 0.05);
-}
+@media only screen and (max-width : 991px){
+    .container{
+        width: 80vw;
+    }
+    .nav-list {
+        position: fixed;
+        left: -150%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
 
-.nav-list.active {
-    background-color: #252525;
-    left: 0;
-    overflow: hidden;
-}
+    .nav-list.active {
+        background-color: #252525;
+        left: 0;
+        overflow: hidden;
+    }
 
-.nav-item {
-    margin: 2.5rem 0;
-}
+    .nav-item {
+        margin: 2.5rem 0;
+    }
 
-.hamburger {
-    display: block;
-    cursor: pointer;
-    margin-right: 10px;
-}
-.hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-}
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-.hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-}
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-.hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-}
-.fa-search{
-    position: relative;
-    margin-right: 200px;
-    top: 26px;
-}
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .fa-search{
+        position: relative;
+        margin-right: 235px;
+        top: 26px;
+    }
+    .search-input{
+        margin-bottom: 10px;
+    }
+    nav a:first-child{
+        margin-left:0;
+    }
 }
 
 @media only screen and (max-width: 991px) {
