Fixed Home/User page for 0 posts/following but search page styling left

--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -258,6 +258,9 @@ button:hover{
     flex-direction: column;
     word-wrap:wrap;
     width:450px;
+    margin-left:1.5rem;
+    margin-right:1.5rem;
+    margin-bottom: -3.5rem;
 }
 .desc{
     font-size: 30px;
