--- a/public/User/style.css
+++ b/public/User/style.css
@@ -3,11 +3,12 @@
     font-family: 'Jost', sans-serif;
     margin: 0;
     padding: 0;
-    color: #f1f1f1;
+    color: #252525;
 }
 body{
     overflow-x: hidden;
 }
+
 #loading{
     position: fixed;
     width: 100%;
@@ -151,10 +152,12 @@ nav img{
 
 }
 .profile-user-name>h1{
+    color: #f1f1f1;
     font-size: 3.5rem;
     font-weight: 200;
 }
 .follow-btn{
+    color: #f1f1f1;
     background: none;
     padding:10px 20px;
     border:1px solid white;
@@ -168,6 +171,7 @@ nav img{
     cursor: pointer;
 }
 .user-desc{
+    color: #f1f1f1;
     width:50vw;
     text-align: center;
     font-size: 1.7rem;
@@ -179,8 +183,21 @@ nav img{
     justify-content:center;
 }
 .user-followers>div{
+    color: #f1f1f1;
     margin:20px;
     font-size: 20px;
+}
+.navigatetofoll{
+    text-decoration: none;
+}
+.followers div{
+    color: #f1f1f1;
+}
+.followings div {
+    color: #f1f1f1;
+}
+.blogs div{
+    color: #f1f1f1;
 }
 .count{
     border:1px solid #f8bf8c;
@@ -189,6 +206,8 @@ nav img{
     color:black;
     border-radius: 3px;  
     margin-bottom: 5px;
+    width:30px;
+    text-align: center;
 }
 .count:hover{
     cursor:pointer;
@@ -211,9 +230,6 @@ nav img{
     padding-top: 60px;
     padding-bottom: 100px;
 }
-/* #followers-section,#following-section{
-    width:50%;
-} */
 #categories{
     /* margin-top: 50px; */
     width:50vw;
@@ -235,13 +251,12 @@ nav img{
 .category-wrap{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
-    height:300px;
+    height:200px;
     width:40vw;
     overflow: scroll;
 }
+
 .category-wrap .cat{
     display: flex;
     flex-direction: column;
@@ -260,12 +275,17 @@ nav img{
 }
 
 .cat .cat-img img{
-    height:200px;
-    width: 200px;
+    height:100px;
+    width: 100px;
     border-radius: 50%;
     object-fit: cover;
     border: 1px #fdfdfd solid;
     transition:transform .75s;
+}
+.cat-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cat .cat-img img:hover{
     transform:scale(1.15);
@@ -280,7 +300,6 @@ nav img{
     font-weight: 500;
     /* text-align: center; */
 }
-
 /******************* myblogs ****************/
 .blog-header{
     color:black;
@@ -304,7 +323,23 @@ nav img{
     bottom: 95px;
     left: 8px;
 }
-
+.bookmark{
+    display: flex;
+    position: absolute;
+    height:20px;
+    width: 399px;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    transform: translateX(-60px);
+}
+#recent .bookmark .fa-regular{
+    color: #252525;
+}
+#recent .bookmark .fa-solid{
+    color: #252525;
+    
+}
 /****** upper-body ******/
 
 .upper-body{
@@ -561,8 +596,68 @@ button:hover{
 ::-webkit-scrollbar-thumb:horizontal:hover{
     cursor: pointer;
 }
-
-
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: 15% auto; /* 15% from the top and centered */
+    /* padding: 20px; */
+    padding:12px 12px;
+    border: 1px solid #888;
+    width: 30%; 
+    height: 20vh;
+    animation-name: animate;
+        animation-duration: 1s;
+  }
+  @keyframes animate {
+    0%{
+        opacity:0;
+    }
+    100%{
+        display:1;
+    }
+  }
+  /* The Close Button */
+  .close {
+    color: rgb(255, 255, 255);
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    top:10px;
+    right:20px;
+  }
+  .close:hover,
+  .close:focus {
+    color: rgb(172, 165, 165);
+    text-decoration: none;
+    cursor: pointer;
+  }
+#mb1{
+    margin: 5%;
+    color: #000;
+    background-color: red;
+    width: 15%;
+}
+#mb2{
+    margin: 5%;
+    color: #000;
+    background-color: rgb(91, 84, 84);
+    width: 15%;
+}
 /****************footer**************/
 
 footer{
