--- a/public/search/styles.css
+++ b/public/search/styles.css
@@ -54,8 +54,8 @@ nav a:first-child{
 }
 .nav-list>li{
     margin:10px;
-    /* padding-right:15px; */
-    margin-right: 20px;
+    padding-right:15px;
+    margin-right: 40px;
     font-size: 1.4rem;
 }
 .nav-list>li>a{
@@ -120,6 +120,22 @@ nav a:first-child{
     border-radius: 30px;
     padding:8.2px;
     padding-left: 30px;
+}
+.search-input{
+    color:white;
+}
+.search-btn{
+    padding:10px 20px;
+    margin-right: 20px;
+    background: none;
+    color:white;
+    border: 1px solid white;
+    border-radius: 20px;
+}
+.search-btn:hover{
+    color:black;
+    background-color: #f8bf8c;
+    cursor:pointer;
 }
 .fa-search{
     position: relative;
@@ -244,6 +260,13 @@ nav img{
     padding:3px 9px;
     border-radius: 5.2px;
 
+}
+.tag-wrap{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width:100%;
 }
 .search-tags>p{
     font-size: 20px;
@@ -415,55 +438,61 @@ footer{
 }
 
 
-@media only screen and (max-width : 768px){
-.container{
-    width: 80vw;
-}
-.nav-list {
-    position: fixed;
-    left: -150%;
-    top: 5rem;
-    flex-direction: column;
-    background-color: #fff;
-    width: 100%;
-    border-radius: 10px;
-    text-align: center;
-    transition: 0.3s;
-    box-shadow:
-        0 10px 27px rgba(0, 0, 0, 0.05);
-}
+@media only screen and (max-width : 991px){
+    .container{
+        width: 80vw;
+    }
+    .nav-list {
+        position: fixed;
+        left: -150%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
 
-.nav-list.active {
-    background-color: #252525;
-    left: 0;
-    overflow: hidden;
-}
+    .nav-list.active {
+        background-color: #252525;
+        left: 0;
+        overflow: hidden;
+    }
 
-.nav-item {
-    margin: 2.5rem 0;
-}
+    .nav-item {
+        margin: 2.5rem 0;
+    }
 
-.hamburger {
-    display: block;
-    cursor: pointer;
-    margin-right: 10px;
-}
-.hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-}
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-.hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-}
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
 
-.hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-}
-.fa-search{
-    position: relative;
-    margin-right: 200px;
-    top: 26px;
-}
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .fa-search{
+        position: relative;
+        margin-right: 235px;
+        top: 26px;
+    }
+    .search-input{
+        margin-bottom: 10px;
+    }
+    nav a:first-child{
+        margin-left:0;
+    }
 }
 
 @media only screen and (max-width: 991px) {
