--- a/public/style.css
+++ b/public/style.css
@@ -170,6 +170,9 @@ body{
         display:1;
     }
   }
+  #para{
+    color:black;
+  }
   /* The Close Button */
   .close {
     color: rgb(255, 255, 255);
@@ -185,6 +188,5 @@ body{
     text-decoration: none;
     cursor: pointer;
   }
-
 
 
