--- a/public/Blog-opening/style.css
+++ b/public/Blog-opening/style.css
@@ -526,6 +526,7 @@ button.primaryContained {
     position: relative;
     margin-bottom: 50px;
     padding-bottom: 50px;
+    width:100%;
   }
   .left {
     position: absolute;
@@ -574,6 +575,7 @@ button.primaryContained {
     flex-direction: column;
     word-wrap:wrap;
     width:350px;
+    margin:2%
 }
 .blog-title{
     font-family: 'Bona Nova', serif;
@@ -602,7 +604,7 @@ button.primaryContained {
     user-select: none;
 }
 .fa-solid{
-    margin-left: 82.5px;
+    margin-left: 0px;
     cursor: pointer;
     user-select: none;
 }
@@ -863,5 +865,20 @@ footer{
     .company-name {
         position: relative;
         left: 10px;
+    }
+}
+@media only screen and (max-width:610px){
+    .footer-name{
+        margin:20px auto 20px 3px;
+    }
+    .main-footer{
+        margin: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        /* align-items: center;  */
+        justify-content: flex-start;
+    }
+    .footer-column{
+        margin: 10px;
     }
 }
