--- a/public/Homepage/style.css
+++ b/public/Homepage/style.css
@@ -658,3 +658,18 @@ footer{
     left: 10px;
 }
 }
+@media only screen and (max-width:610px){
+    .footer-name{
+        margin:20px auto 20px 3px;
+    }
+    .main-footer{
+        margin: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        /* align-items: center;  */
+        justify-content: flex-start;
+    }
+    .footer-column{
+        margin: 10px;
+    }
+}
