--- a/public/blogedit/style.css
+++ b/public/blogedit/style.css
@@ -417,3 +417,18 @@ nav img{
     }
 
 }
+@media only screen and (max-width:610px){
+    .footer-name{
+        margin:20px auto 20px 3px;
+    }
+    .main-footer{
+        margin: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        /* align-items: center;  */
+        justify-content: flex-start;
+    }
+    .footer-column{
+        margin: 10px;
+    }
+}
