--- a/public/edit-profile/editprofile.css
+++ b/public/edit-profile/editprofile.css
@@ -177,3 +177,18 @@ nav img{
     padding:40px 30px;
     border-radius: 10px;
 }
+@media only screen and (max-width:610px){
+    .footer-name{
+        margin:20px auto 20px 3px;
+    }
+    .main-footer{
+        margin: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        /* align-items: center;  */
+        justify-content: flex-start;
+    }
+    .footer-column{
+        margin: 10px;
+    }
+}
