--- a/client/User/style.css
+++ b/client/User/style.css
@@ -316,6 +316,11 @@ nav img{
 .latest-cards{
     color:black;
     margin-left: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
 }
 .fa-trash:hover::after{
     content: "Delete";
