box shadow added to all the pages

--- a/client/category/style.css
+++ b/client/category/style.css
@@ -217,6 +217,7 @@ nav img{
     margin: 1px 10px;
     overflow: hidden;
     border-radius: 20px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 .child>img{
     width: 350px;
