--- a/client/Homepage/style.css
+++ b/client/Homepage/style.css
@@ -386,8 +386,9 @@ button:hover{
     width: 200px;
     border-radius: 50%;
     object-fit: cover;
-    border: 1px #252525 solid;
+    /* border: 1px #252525 solid; */
     transition:transform .75s;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 .cat .cat-img img:hover{
     transform:scale(1.15);
