--- a/client/User/style.css
+++ b/client/User/style.css
@@ -442,6 +442,7 @@ button:hover{
     margin: 1px 10px;
     overflow: hidden;
     border-radius: 20px;
+        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   }
   .cover {
     padding: 0px 30px;
