--- a/client/Blog-opening/style.css
+++ b/client/Blog-opening/style.css
@@ -90,7 +90,17 @@ nav a:first-child{
 .hamburger {
     display: none;
 }
-
+.my-img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin-left: 12px;
+    /* position: relative; */
+    bottom: 125px;
+    left: -2px;
+    object-fit: cover;
+    transform: translate(-7px,4px);
+}
 .bar {
     display: block;
     width: 25px;
